// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion section only opens one section at a time 1`] = `
<div>
  <ul
    className="Accordion"
  >
    <li
      className="Accordion__item"
      key="0"
    >
      <button
        onClick={[Function]}
        type="button"
      >
        Section 1
      </button>
    </li>
    <li
      className="Accordion__item"
      key="1"
    >
      <button
        onClick={[Function]}
        type="button"
      >
        Section 2
      </button>
      <p
        className="content"
      >
        Cupiditate tenetur aliquam necessitatibus id distinctio quas nihil ipsam nisi modi!
      </p>
    </li>
    <li
      className="Accordion__item"
      key="2"
    >
      <button
        onClick={[Function]}
        type="button"
      >
        Section 3
      </button>
    </li>
  </ul>
</div>
`;

exports[`Accordion section opens a clicked section 1`] = `
<div>
  <ul
    className="Accordion"
  >
    <li
      className="Accordion__item"
      key="0"
    >
      <button
        onClick={[Function]}
        type="button"
      >
        Section 1
      </button>
    </li>
    <li
      className="Accordion__item"
      key="1"
    >
      <button
        onClick={[Function]}
        type="button"
      >
        Section 2
      </button>
    </li>
    <li
      className="Accordion__item"
      key="2"
    >
      <button
        onClick={[Function]}
        type="button"
      >
        Section 3
      </button>
    </li>
  </ul>
</div>
`;

exports[`Accordion section renders an empty li given no sections 1`] = `
<div>
  <ul
    className="Accordion"
  />
</div>
`;

exports[`Accordion section renders no sections as active by default 1`] = `
<div>
  <ul
    className="Accordion"
  >
    <li
      className="Accordion__item"
      key="0"
    >
      <button
        onClick={[Function]}
        type="button"
      >
        Section 1
      </button>
    </li>
    <li
      className="Accordion__item"
      key="1"
    >
      <button
        onClick={[Function]}
        type="button"
      >
        Section 2
      </button>
    </li>
    <li
      className="Accordion__item"
      key="2"
    >
      <button
        onClick={[Function]}
        type="button"
      >
        Section 3
      </button>
    </li>
  </ul>
</div>
`;
